Reverted the terminology change. If people would only agree on
2004-12-21  Christian Rose  <menthos@menthos.com>

	* sv.po: Reverted the terminology change.
	If people would only agree on terminology...

--- a/po/sv.po
+++ b/po/sv.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: gtk+\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-12-21 00:01+0100\n"
-"PO-Revision-Date: 2004-12-21 00:02+0100\n"
+"PO-Revision-Date: 2004-12-21 14:43+0100\n"
 "Last-Translator: Christian Rose <menthos@menthos.com>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -792,7 +792,7 @@ msgstr "Samla inte GDI-förfrågningar i en batch"
 #. Description of --no-wintab in --help output
 #: gdk/win32/gdkmain-win32.c:62
 msgid "Don't use the Wintab API for tablet support"
-msgstr "Använd inte Wintab-API:t för stöd av ritplattor"
+msgstr "Använd inte Wintab-API:t för stöd av ritbrädor"
 
 #. Description of --ignore-wintab in --help output
 #: gdk/win32/gdkmain-win32.c:64
