--- a/po/hu.po
+++ b/po/hu.po
@@ -1,18 +1,18 @@
 # Hungarian translation of gtk+.
-# Copyright (C) 1999, 2000, 2001, 2002, 2004 Free Software Foundation, Inc.
+# Copyright (C) 1999, 2000, 2001, 2002, 2004, 2005 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gtk+ package.
 # Szabolcs Ban <shooby@gnome.hu>, 1999, 2000, 2001, 2002.
 # Andras Timar <timar@gnome.hu>, 2002.
-# Gabor Kelemen <kelemeng@gnome.hu>, 2004.
 # Laszlo Dvornik <dvornik@gnome.hu>, 2004.
+# Gabor Kelemen <kelemeng@gnome.hu>, 2004, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gtk+\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-08 02:01-0500\n"
-"PO-Revision-Date: 2004-11-05 13:22+0100\n"
-"Last-Translator: Laszlo Dvornik <dvornik@gnome.hu>\n"
+"POT-Creation-Date: 2005-01-11 12:31+0100\n"
+"PO-Revision-Date: 2005-01-11 14:21+0100\n"
+"Last-Translator: Gabor Kelemen <kelemeng@gnome.hu>\n"
 "Language-Team: Hungarian <gnome@gnome.hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -58,6 +58,8 @@ msgid ""
 "Image-loading module %s does not export the proper interface; perhaps it's "
 "from a different GTK version?"
 msgstr ""
+"A(z) %s képbetöltő-modul nem exportálja a megfelelő interfészt, talán "
+"egymásik GTK verzióból van?"
 
 #: gdk-pixbuf/gdk-pixbuf-io.c:628 gdk-pixbuf/gdk-pixbuf-io.c:680
 #, c-format
@@ -87,10 +89,12 @@ msgstr "Hiba képfájlba íráskor: %s"
 #, c-format
 msgid "This build of gdk-pixbuf does not support saving the image format: %s"
 msgstr ""
+"A gdk-pixbuf ezen változatába nincs befordítva a(z) %s képformátumba való "
+"mentés támogatása"
 
 #: gdk-pixbuf/gdk-pixbuf-io.c:1417
 msgid "Insufficient memory to save image to callback"
-msgstr ""
+msgstr "Nincs elég memória a kép visszahíváshoz mentéséhez"
 
 #: gdk-pixbuf/gdk-pixbuf-io.c:1429
 msgid "Failed to open temporary file"
@@ -111,6 +115,8 @@ msgid ""
 "Failed to close '%s' while writing image, all data may not have been saved: %"
 "s"
 msgstr ""
+"Nem sikerült lezárni a(z) '%s'-t a kép írása közben, lehet, hogy nem "
+"sikerült minden adatot elmenteni: %s"
 
 #: gdk-pixbuf/gdk-pixbuf-io.c:1853 gdk-pixbuf/gdk-pixbuf-io.c:1903
 msgid "Insufficient memory to save image into a buffer"
@@ -119,7 +125,7 @@ msgstr "Nincs elég memória a kép pufferbe mentéséhez"
 #: gdk-pixbuf/gdk-pixbuf-loader.c:383
 #, c-format
 msgid "Incremental loading of image type '%s' is not supported"
-msgstr ""
+msgstr "A(z) %s típusú képek növekményes betöltése nem támogatott"
 
 #: gdk-pixbuf/gdk-pixbuf-loader.c:411 gdk-pixbuf/gdk-pixbuf-loader.c:513
 #, c-format
@@ -127,6 +133,8 @@ msgid ""
 "Internal error: Image loader module '%s' failed to begin loading an image, "
 "but didn't give a reason for the failure"
 msgstr ""
+"Belső hiba: A(z) %s képbetöltő modul nem tudta elkezdeni a kép betöltését, "
+"de nem adta meg a hiba okát"
 
 #: gdk-pixbuf/gdk-pixdata.c:147
 msgid "Image header corrupt"
@@ -144,12 +152,12 @@ msgstr "A kép képpontadata sérült"
 #, c-format
 msgid "failed to allocate image buffer of %u byte"
 msgid_plural "failed to allocate image buffer of %u bytes"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "nem sikerült %u bájt méretű képpuffert lefoglalni"
+msgstr[1] "nem sikerült %u bájt méretű képpuffert lefoglalni"
 
 #: gdk-pixbuf/io-ani.c:244
 msgid "Unexpected icon chunk in animation"
-msgstr ""
+msgstr "Váratlan ikondarab az animációban"
 
 #: gdk-pixbuf/io-ani.c:337
 msgid "Unsupported animation type"
@@ -166,7 +174,7 @@ msgstr "Nincs elég memória az animáció betöltéséhez"
 
 #: gdk-pixbuf/io-ani.c:400 gdk-pixbuf/io-ani.c:417 gdk-pixbuf/io-ani.c:428
 msgid "Malformed chunk in animation"
-msgstr ""
+msgstr "Hibás részlet az animációban"
 
 #: gdk-pixbuf/io-ani.c:676
 msgid "The ANI image format"
@@ -217,7 +225,7 @@ msgstr "A GIF-képbetöltő nem tudja értelmezni ezt a képet."
 
 #: gdk-pixbuf/io-gif.c:664
 msgid "Bad code encountered"
-msgstr ""
+msgstr "Hibás kód érkezett"
 
 #: gdk-pixbuf/io-gif.c:674
 msgid "Circular table entry in GIF file"
@@ -246,6 +254,8 @@ msgid ""
 "GIF image has no global colormap, and a frame inside it has no local "
 "colormap."
 msgstr ""
+"A GIF képnek nincs globális színtérképe, és a benne lévő keretnek sincs "
+"lokális színtérképe."
 
 #: gdk-pixbuf/io-gif.c:1491
 msgid "GIF image was truncated or incomplete."
@@ -351,7 +361,7 @@ msgstr "Nem lehet memóriát kiosztani a fejléchez"
 
 #: gdk-pixbuf/io-pcx.c:206 gdk-pixbuf/io-pcx.c:566
 msgid "Couldn't allocate memory for context buffer"
-msgstr ""
+msgstr "Nem lehet memóriát foglalni a kontextus-puffer számára"
 
 #: gdk-pixbuf/io-pcx.c:607
 msgid "Image has invalid width and/or height"
@@ -372,15 +382,15 @@ msgstr "Nem lehet létrehozni új pixbuf-t"
 
 #: gdk-pixbuf/io-pcx.c:656
 msgid "Couldn't allocate memory for line data"
-msgstr ""
+msgstr "Nem lehet memóriát foglalni a vonaladatok számára"
 
 #: gdk-pixbuf/io-pcx.c:663
 msgid "Couldn't allocate memory for paletted data"
-msgstr ""
+msgstr "Nem lehet memóriát foglalni a palettaadatok számára"
 
 #: gdk-pixbuf/io-pcx.c:710
 msgid "Didn't get all lines of PCX image"
-msgstr ""
+msgstr "Nem található a PCX-kép minden sora"
 
 #: gdk-pixbuf/io-pcx.c:717
 msgid "No palette found at end of PCX data"
@@ -427,6 +437,8 @@ msgid ""
 "Insufficient memory to store a %ld by %ld image; try exiting some "
 "applications to reduce memory usage"
 msgstr ""
+"Nincs elég memória egy %ld x %ld méretű kép betöltéséhez, próbáljon meg "
+"kilépni néhány alkalmazásból a memóriahasználat csökkentéséhez"
 
 #: gdk-pixbuf/io-png.c:669
 msgid "Fatal error reading PNG image file"
@@ -441,15 +453,17 @@ msgstr "Végzetes hiba a PNG képfájl olvasásakor: %s"
 msgid ""
 "Keys for PNG text chunks must have at least 1 and at most 79 characters."
 msgstr ""
+"A PNG szöveges darabok kulcsainak legalább 1 és legfeljebb 79 karakterből "
+"kell állniuk."
 
 #: gdk-pixbuf/io-png.c:821
 msgid "Keys for PNG text chunks must be ASCII characters."
-msgstr ""
+msgstr "A PNG szöveges darabok kulcsainak ASCII karaktereknek kell lenniük."
 
 #: gdk-pixbuf/io-png.c:854
 #, c-format
 msgid "Value for PNG text chunk %s cannot be converted to ISO-8859-1 encoding."
-msgstr ""
+msgstr "%s PNG szöveges darab értéke nem konvertálható ISO-8859-1 kódolásúra."
 
 #: gdk-pixbuf/io-png.c:994
 msgid "The PNG image format"
@@ -457,7 +471,7 @@ msgstr "PNG képformátum"
 
 #: gdk-pixbuf/io-pnm.c:249
 msgid "PNM loader expected to find an integer, but didn't"
-msgstr ""
+msgstr "A PNM-betöltő egy egészet várt, de nem talált"
 
 #: gdk-pixbuf/io-pnm.c:281
 msgid "PNM file has an incorrect initial byte"
@@ -465,7 +479,7 @@ msgstr "A PNM-fájl kezdő bájtja helytelen"
 
 #: gdk-pixbuf/io-pnm.c:311
 msgid "PNM file is not in a recognized PNM subformat"
-msgstr ""
+msgstr "A PNM-fájl nincs felismert PNM-alformátumban"
 
 #: gdk-pixbuf/io-pnm.c:336
 msgid "PNM file has an image width of 0"
@@ -495,19 +509,21 @@ msgstr "A nyers PNM-képtípus érvénytelen"
 
 #: gdk-pixbuf/io-pnm.c:555 gdk-pixbuf/io-pnm.c:597
 msgid "PNM image format is invalid"
-msgstr "Érvénytelen PNM képformátum"
+msgstr "Érvénytelen PNM-képformátum"
 
 #: gdk-pixbuf/io-pnm.c:656
 msgid "PNM image loader does not support this PNM subformat"
-msgstr "A PNM képbetöltő nem támogatja ezt a PNM alformátumot"
+msgstr "A PNM-képbetöltő nem támogatja ezt a PNM-alformátumot"
 
 #: gdk-pixbuf/io-pnm.c:711
 msgid "Premature end-of-file encountered"
-msgstr ""
+msgstr "A fájl végét túl korán értem el"
 
 #: gdk-pixbuf/io-pnm.c:743 gdk-pixbuf/io-pnm.c:974
 msgid "Raw PNM formats require exactly one whitespace before sample data"
 msgstr ""
+"A nyers PNM-formátumok pontosan egy üreshely-karaktert igényelnek a "
+"mintaadatok előtt"
 
 #: gdk-pixbuf/io-pnm.c:770
 msgid "Cannot allocate memory for loading PNM image"
@@ -515,11 +531,11 @@ msgstr "Nem lehet memóriát kiosztani a PNM-kép betöltéséhez"
 
 #: gdk-pixbuf/io-pnm.c:820
 msgid "Insufficient memory to load PNM context struct"
-msgstr ""
+msgstr "Nincs elég memória a PNM kontextus struktúrának"
 
 #: gdk-pixbuf/io-pnm.c:871
 msgid "Unexpected end of PNM image data"
-msgstr ""
+msgstr "A PNM-képadatnak váratlanul vége"
 
 #: gdk-pixbuf/io-pnm.c:1003
 msgid "Insufficient memory to load PNM file"
@@ -539,7 +555,7 @@ msgstr "A RAS-kép típusa ismeretlen"
 
 #: gdk-pixbuf/io-ras.c:156
 msgid "unsupported RAS image variation"
-msgstr ""
+msgstr "nem támogatott RAS-képváltozat"
 
 #: gdk-pixbuf/io-ras.c:171 gdk-pixbuf/io-ras.c:200
 msgid "Not enough memory to load RAS image"
@@ -579,7 +595,7 @@ msgstr "Nem lehet kiosztani színtérkép bejegyzéseket"
 
 #: gdk-pixbuf/io-tga.c:721
 msgid "Unexpected bitdepth for colormap entries"
-msgstr ""
+msgstr "Váratlan bitmélység a színtérkép-bejegyzésekhez"
 
 #: gdk-pixbuf/io-tga.c:739
 msgid "Cannot allocate TGA header memory"
@@ -596,11 +612,11 @@ msgstr "A TGA képformátum nem támogatott"
 
 #: gdk-pixbuf/io-tga.c:861
 msgid "Cannot allocate memory for TGA context struct"
-msgstr ""
+msgstr "Nem lehet memóriát lefoglalni a TGA kontextus struktúrának"
 
 #: gdk-pixbuf/io-tga.c:926
 msgid "Excess data in file"
-msgstr ""
+msgstr "Többletadat a fájlban"
 
 #: gdk-pixbuf/io-tga.c:995
 msgid "The Targa image format"
@@ -780,22 +796,22 @@ msgstr "Kikapcsolandó Gdk debug jelzőbitek"
 #. Description of --sync in --help output
 #: gdk/win32/gdkmain-win32.c:60
 msgid "Don't batch GDI requests"
-msgstr ""
+msgstr "Ne kötegelje a GDI kéréseket"
 
 #. Description of --no-wintab in --help output
 #: gdk/win32/gdkmain-win32.c:62
 msgid "Don't use the Wintab API for tablet support"
-msgstr ""
+msgstr "Ne használja a Wintab API-t a tablet támogatáshoz"
 
 #. Description of --ignore-wintab in --help output
 #: gdk/win32/gdkmain-win32.c:64
 msgid "Same as --no-wintab"
-msgstr ""
+msgstr "Ugyanaz mint --no-wintab"
 
 #. Description of --use-wintab in --help output
 #: gdk/win32/gdkmain-win32.c:66
 msgid "Do use the Wintab API [default]"
-msgstr ""
+msgstr "Ne használja a Wintab API-t [alapértelmezett]"
 
 #. Description of --max-colors=COLORS in --help output
 #: gdk/win32/gdkmain-win32.c:68
@@ -906,7 +922,7 @@ msgstr "calendar:week_start:1"
 #: gtk/gtkcellrendererprogress.c:235 gtk/gtkcellrendererprogress.c:293
 #, c-format
 msgid "progress bar label|%d %%"
-msgstr ""
+msgstr "folyamatjelző felirata|%d %%"
 
 #: gtk/gtkcolorbutton.c:220 gtk/gtkcolorbutton.c:574
 msgid "Pick a Color"
@@ -1063,7 +1079,6 @@ msgid "Invalid filename: %s"
 msgstr "Érvénytelen fájlnév: %s"
 
 #: gtk/gtkfilechooserbutton.c:65
-#, fuzzy
 msgid "Select A File"
 msgstr "Válasszon ki egy fájlt"
 
@@ -1083,48 +1098,36 @@ msgstr "(Nincs)"
 
 #: gtk/gtkfilechooserbutton.c:1515
 msgid "Other..."
-msgstr ""
+msgstr "Egyéb..."
 
 #: gtk/gtkfilechooserdefault.c:867
-#, fuzzy
 msgid "Could not retrieve information about the file"
-msgstr ""
-"Nem érhető el információ erről: %s\n"
-"%s"
+msgstr "Nem érhető el információ a fájlról"
 
 #: gtk/gtkfilechooserdefault.c:878
-#, fuzzy
 msgid "Could not add a bookmark"
-msgstr ""
-"Nem adható könyvjelző ehhez: %s\n"
-"%s"
+msgstr "Nem adható hozzá könyvjelző"
 
 #: gtk/gtkfilechooserdefault.c:889
-#, fuzzy
 msgid "Could not remove bookmark"
-msgstr ""
-"Nem lehet eltávolítani a könyvjelzőt ehhez: %s\n"
-"%s"
+msgstr "Nem lehet eltávolítani a könyvjelzőt"
 
 #: gtk/gtkfilechooserdefault.c:900
 msgid "The folder could not be created"
-msgstr ""
+msgstr "A mappa nem hozható létre"
 
 #: gtk/gtkfilechooserdefault.c:911
-#, fuzzy
 msgid "Invalid file name"
-msgstr "Érvénytelen fájlnév: %s"
+msgstr "Érvénytelen fájlnév"
 
 #: gtk/gtkfilechooserdefault.c:921
 msgid "The folder contents could not be displayed"
-msgstr ""
+msgstr "A mappa tartalma nem jeleníthető meg"
 
 #: gtk/gtkfilechooserdefault.c:1119
-#, fuzzy, c-format
+#, c-format
 msgid "Could not get information about '%s': %s"
-msgstr ""
-"Nem érhető el információ erről: %s\n"
-"%s"
+msgstr "Nem lehet információt szerezni erről: '%s': %s"
 
 #: gtk/gtkfilechooserdefault.c:2095
 #, c-format
@@ -1145,9 +1148,9 @@ msgid "Remove the bookmark '%s'"
 msgstr "A(z) '%s' könyvjelző eltávolítása"
 
 #: gtk/gtkfilechooserdefault.c:2591
-#, fuzzy, c-format
+#, c-format
 msgid "Could not add a bookmark for '%s' because it is an invalid path name."
-msgstr "%s érvénytelen útvonalnév, nem hozható létre könyvjelző."
+msgstr "%s érvénytelen útvonalnév, nem adható hozzá könyvjelző."
 
 #: gtk/gtkfilechooserdefault.c:2769
 msgid "Shortcuts"
@@ -1178,9 +1181,8 @@ msgid "_Add to Shortcuts"
 msgstr "Hozzá_adás a gyorsbillentyűkhöz"
 
 #: gtk/gtkfilechooserdefault.c:3007
-#, fuzzy
 msgid "Open _Location"
-msgstr "Hely megnyitása"
+msgstr "He_ly megnyitása"
 
 #: gtk/gtkfilechooserdefault.c:3019
 msgid "Show _Hidden Files"
@@ -1233,16 +1235,14 @@ msgid "Cannot change to folder because it is not local"
 msgstr "Nem lehet megváltoztatni a mappát, mert az nem helyi"
 
 #: gtk/gtkfilechooserdefault.c:5048
-#, fuzzy, c-format
+#, c-format
 msgid "Shortcut %s does not exist"
 msgstr "%s gyorsbillentyű nem létezik"
 
 #: gtk/gtkfilechooserdefault.c:5508
-#, fuzzy, c-format
+#, c-format
 msgid "Could not mount %s"
-msgstr ""
-"Nem lehet kijelölni a(z) %s-t:\n"
-"%s"
+msgstr "Nem lehet csatlakoztatni a(z) %s-t"
 
 #: gtk/gtkfilechooserdefault.c:5802
 msgid "Type name of new folder"
@@ -1283,30 +1283,21 @@ msgid "Unknown"
 msgstr "Ismeretlen"
 
 #: gtk/gtkfilechooserdefault.c:5985
-#, fuzzy
 msgid "Cannot change folder"
-msgstr "Létrehozás _mappában:"
+msgstr "Nem lehet könyvtárat váltani"
 
 #: gtk/gtkfilechooserdefault.c:5986
-#, fuzzy
 msgid "The folder you specified is an invalid path."
-msgstr ""
-"Nem lehet az ön által megadott mappába lépni mivel az egy érvénytelen "
-"útvonal."
+msgstr "Az ön által megadott mappa egy érvénytelen útvonal."
 
 #: gtk/gtkfilechooserdefault.c:6025
-#, fuzzy, c-format
+#, c-format
 msgid "Could not build file name from '%s' and '%s'"
-msgstr ""
-"Nem hozható létre fájlnév ebből: %s és ebből: %s:\n"
-"%s"
+msgstr "Nem hozható létre fájlnév ebből: %s és ebből: %s"
 
 #: gtk/gtkfilechooserdefault.c:6061
-#, fuzzy
 msgid "Could not select item"
-msgstr ""
-"Nem lehet kijelölni a(z) %s-t:\n"
-"%s"
+msgstr "Nem lehet kijelölni az elemet"
 
 #: gtk/gtkfilechooserdefault.c:6101
 msgid "Open Location"
@@ -1504,14 +1495,14 @@ msgstr "(Üres)"
 #: gtk/gtkfilesystemunix.c:415 gtk/gtkfilesystemunix.c:429
 #: gtk/gtkfilesystemunix.c:626 gtk/gtkfilesystemwin32.c:482
 #: gtk/gtkfilesystemwin32.c:495 gtk/gtkfilesystemwin32.c:1530
-#, fuzzy, c-format
+#, c-format
 msgid "Error getting information for '%s': %s"
-msgstr "Nem lehet információt szerezni a(z) '%s' fájlról: %s"
+msgstr "Hiba a(z) \"%s\" számára való információszerzés közben: %s"
 
 #: gtk/gtkfilesystemunix.c:495 gtk/gtkfilesystemwin32.c:537
-#, fuzzy, c-format
+#, c-format
 msgid "Error creating directory '%s': %s"
-msgstr "hiba a(z) '%s' könyvtár létrehozásakor: %s"
+msgstr "Hiba a(z) '%s' könyvtár létrehozásakor: %s"
 
 #: gtk/gtkfilesystemunix.c:575 gtk/gtkfilesystemwin32.c:597
 msgid "This file system does not support mounting"
@@ -1524,7 +1515,7 @@ msgstr "Fájlrendszer"
 #: gtk/gtkfilesystemunix.c:740
 #, c-format
 msgid "Could not get a stock icon for %s"
-msgstr ""
+msgstr "Nem érhető el alapértelmezett ikon a következőhöz: %s"
 
 #: gtk/gtkfilesystemunix.c:835
 #, c-format
@@ -1536,24 +1527,24 @@ msgstr ""
 "másik nevet."
 
 #: gtk/gtkfilesystemunix.c:1443 gtk/gtkfilesystemwin32.c:1004
-#, fuzzy, c-format
+#, c-format
 msgid "Bookmark saving failed: %s"
-msgstr "Sikertelen könyvjelzőmentés (%s)"
+msgstr "Könyvjelző mentése sikertelen: %s"
 
 #: gtk/gtkfilesystemunix.c:1495
 #, c-format
 msgid "'%s' already exists in the bookmarks list"
-msgstr ""
+msgstr "\"%s\" már létezik a könyvjelzők listájában"
 
 #: gtk/gtkfilesystemunix.c:1557
 #, c-format
 msgid "'%s' does not exist in the bookmarks list"
-msgstr ""
+msgstr "\"%s\" nem létezik a könyvjelzők listájában"
 
 #: gtk/gtkfilesystemunix.c:1739
-#, fuzzy, c-format
+#, c-format
 msgid "Error getting information for '%s'"
-msgstr "Nem lehet információt szerezni a(z) '%s' fájlról: %s"
+msgstr "Hiba a(z) \"%s\" számára való információszerzés közben"
 
 #: gtk/gtkfontbutton.c:178 gtk/gtkfontbutton.c:295
 msgid "Pick a Font"
@@ -1619,6 +1610,10 @@ msgid ""
 "You can get a copy from:\n"
 "\t%s"
 msgstr ""
+"A(z) \"%s\" ikon nem található. A(z) \"%s\" téma\n"
+"nem található, lehet, hogy telepítenie kell.\n"
+"Beszerezhet egy másolatot a következő helyről:\n"
+"\t%s"
 
 #: gtk/gtkicontheme.c:1328
 #, c-format
@@ -1708,7 +1703,7 @@ msgstr "(ismeretlen)"
 msgid "clear"
 msgstr "törlés"
 
-#: gtk/gtklabel.c:3930
+#: gtk/gtklabel.c:3931
 msgid "Select All"
 msgstr "Mindent kijelöl"
 
@@ -1765,7 +1760,7 @@ msgstr "Csoport"
 
 #: gtk/gtkradiotoolbutton.c:92
 msgid "The radio tool button whose group this button belongs to."
-msgstr ""
+msgstr "Az a rádiógomb-csoport, amelyhez ez a rádiógomb tartozik."
 
 #: gtk/gtkrc.c:2399
 #, c-format
@@ -1780,7 +1775,7 @@ msgstr "A kép nem található a következő pixmap_path útvonalon: \"%s\""
 #: gtk/gtkrc.c:3476
 #, c-format
 msgid "Pixmap path element: \"%s\" must be absolute, %s, line %d"
-msgstr ""
+msgstr "A kép útvonalának eleme: \"%s\" abszolút kell legyen, %s, %d. sor"
 
 #. KEEP IN SYNC with gtkiconfactory.c stock icons, when appropriate
 #: gtk/gtkstock.c:286
@@ -2137,7 +2132,7 @@ msgstr "ZWNJ Null szélességű _nem-összekötő"
 #: gtk/gtkthemes.c:71
 #, c-format
 msgid "Unable to locate theme engine in module_path: \"%s\","
-msgstr ""
+msgstr "Nem található a témamotor a következő modul útvonalon: \"%s\","
 
 #: gtk/gtktipsquery.c:186
 msgid "--- No Tip ---"
@@ -2146,17 +2141,17 @@ msgstr "-- Nincs segédszöveg --"
 #: gtk/gtkuimanager.c:1132
 #, c-format
 msgid "Unknown attribute '%s' on line %d char %d"
-msgstr ""
+msgstr "Ismeretlen paraméter: \"%s\" a(z) %d. sor %d. karakterénél "
 
 #: gtk/gtkuimanager.c:1332
 #, c-format
 msgid "Unexpected start tag '%s' on line %d char %d"
-msgstr ""
+msgstr "Váratlan kezdőcímke: \"%s\" a(z) %d. sor %d. karakterénél"
 
 #: gtk/gtkuimanager.c:1417
 #, c-format
 msgid "Unexpected character data on line %d char %d"
-msgstr ""
+msgstr "Váratlan karakteradat a(z) %d. sor %d. karakterénél"
 
 #: gtk/gtkuimanager.c:2209
 msgid "Empty"
@@ -2216,29 +2211,3 @@ msgstr "X Input Method"
 #, c-format
 msgid "Could not get information for file '%s': %s"
 msgstr "Nem lehet információt szerezni a(z) '%s' fájlról: %s"
-
-#~ msgid ""
-#~ "Could not change the current folder to %s:\n"
-#~ "%s"
-#~ msgstr ""
-#~ "Nem lehet a jelenlegi mappát átváltani erre: %s:\n"
-#~ "%s"
-
-#~ msgid ""
-#~ "Could not create folder %s:\n"
-#~ "%s"
-#~ msgstr ""
-#~ "Nem lehet létrehozni a(z) %s mappát:\n"
-#~ "%s"
-
-#~ msgid "Could not add bookmark for %s because it is not a folder."
-#~ msgstr "Nem lehet könyvjelzőt adni ehhez: %s, mivel ez nem mappa."
-
-#~ msgid "%s: %s"
-#~ msgstr "%s: %s"
-
-#~ msgid "Could not find the path"
-#~ msgstr "Az útvonal nem található"
-
-#~ msgid "Input Methods"
-#~ msgstr "Beviteli módszerek"
