Hungarian translation updated.
2005-01-15  Laszlo Dvornik  <dvornik@gnome.hu>

	* hu.po: Hungarian translation updated.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-15  Laszlo Dvornik  <dvornik@gnome.hu>
+
+	* hu.po: Hungarian translation updated.
+
 2005-01-14   Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
