--- a/po/hu.po
+++ b/po/hu.po
@@ -3,16 +3,16 @@
 # This file is distributed under the same license as the gtk+ package.
 # Szabolcs Ban <shooby@gnome.hu>, 1999, 2000, 2001, 2002.
 # Andras Timar <timar@gnome.hu>, 2002.
-# Laszlo Dvornik <dvornik@gnome.hu>, 2004.
+# Laszlo Dvornik <dvornik@gnome.hu>, 2004, 2005.
 # Gabor Kelemen <kelemeng@gnome.hu>, 2004, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gtk+\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-11 12:31+0100\n"
-"PO-Revision-Date: 2005-01-11 14:21+0100\n"
-"Last-Translator: Gabor Kelemen <kelemeng@gnome.hu>\n"
+"POT-Creation-Date: 2005-01-15 12:29+0100\n"
+"PO-Revision-Date: 2005-01-15 12:39+0100\n"
+"Last-Translator: Laszlo Dvornik <dvornik@gnome.hu>\n"
 "Language-Team: Hungarian <gnome@gnome.hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -922,7 +922,7 @@ msgstr "calendar:week_start:1"
 #: gtk/gtkcellrendererprogress.c:235 gtk/gtkcellrendererprogress.c:293
 #, c-format
 msgid "progress bar label|%d %%"
-msgstr "folyamatjelző felirata|%d %%"
+msgstr "%d %%"
 
 #: gtk/gtkcolorbutton.c:220 gtk/gtkcolorbutton.c:574
 msgid "Pick a Color"
