--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-16  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2005-01-15  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation.
