--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-17  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkiconview.c: Remove debug output. (#164376, Jens Finke)
+
 2005-01-17  Federico Mena Quintero  <federico@ximian.com>
 
 	Merged from HEAD:
