--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-01-19  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/x11/gdkdisplay-x11.c: Precache the _NET_VIRTUAL_ROOTS
+	atom.
+
+	* gdk/x11/gdkwindow-x11.c (gdk_window_get_frame_extents): 
+	Support _NET_VIRTUAL_ROOTS.  (#163910, Carsten Haitzler)
+
 Tue Jan 18 13:56:09 2005  Manish Singh  <yosh@gimp.org>
 
 	* gtk/gtkfilechooserdefault.c (pending_op_queue): Actually assign
