--- a/po-properties/de.po
+++ b/po-properties/de.po
@@ -7,16 +7,15 @@
 # Hendrik Richter <hendrik@gnome-de.org>, 2004.
 # Hendrik Brandt <heb@gnome-de.org>
 # IM = Input method => Eingabemethode
-# Hendrik Richter <hendrik@gnome-de.org>, 2004.
 # 
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: GTK+ HEAD\n"
+"Project-Id-Version: GTK+ 2.6\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-08 02:01-0500\n"
-"PO-Revision-Date: 2004-12-18 15:04+0100\n"
-"Last-Translator: Hendrik Brandt <heb@gnome-de.org>\n"
+"POT-Creation-Date: 2005-01-20 17:15+0100\n"
+"PO-Revision-Date: 2005-01-20 17:14+0100\n"
+"Last-Translator: Frank Arnold <frank@scirocco-5v-turbo.de>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2072,11 +2071,11 @@ msgstr "Der Titel des Dateiwählers."
 msgid "The desired width of the button widget, in characters."
 msgstr "Die gewünschte Breite des Knopfes in Zeichen"
 
-#: gtk/gtkfilechooserdefault.c:625
+#: gtk/gtkfilechooserdefault.c:627
 msgid "Default file chooser backend"
 msgstr "Vorgabe-Backend des Dateiwählers"
 
-#: gtk/gtkfilechooserdefault.c:626
+#: gtk/gtkfilechooserdefault.c:628
 msgid "Name of the GtkFileChooser backend to use by default"
 msgstr "Der Name des per Vorgabe zu verwendenden GtkFileChooser-Backends"
 
@@ -4431,19 +4430,17 @@ msgstr ""
 
 #: gtk/gtktreeview.c:672
 msgid "Hover Selection"
-msgstr "Schwebende Auswahl"
+msgstr "Auswahl bei Überfahren"
 
 #: gtk/gtktreeview.c:673
 msgid "Whether the selection should follow the pointer"
-msgstr "Soll die Auswahl dem Zeige folgen?"
+msgstr "Soll die Auswahl dem Zeiger folgen?"
 
-# CHECK - »Expand on hover« oder »Hover the expansion«?
 #: gtk/gtktreeview.c:692
 msgid "Hover Expand"
-msgstr "Schwebendes Ausdehnen"
+msgstr "Ausdehnen bei Überfahren"
 
 #: gtk/gtktreeview.c:693
-#, fuzzy
 msgid ""
 "Whether rows should be expanded/collapsed when the pointer moves over them"
 msgstr ""
