--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-20  Frank Arnold  <farnold@cvs.gnome.org>
+
+	* de.po: Updated German translation.
+
 2005-01-20  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
