--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-20  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2005-01-20  Frank Arnold  <farnold@cvs.gnome.org>
 
 	* de.po: Updated German translation.
