--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-21  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2005-01-21  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Update
