--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,10 @@
+2005-01-22  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk-pixbuf-loader.c (gdk_pixbuf_loader_new_with_type) 
+	(gdk_pixbuf_loader_new_with_mime_type): Close the loader
+	before unreffing it in the error case.  (#164915, Crispin 
+	Flowerday)
+
 2005-01-08  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.6.1 ===
