Updated italian translation.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-24  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated Italian translation by
+	Alessio Dessì <alkex@inwind.it>.
+
 2005-01-20  Frank Arnold  <farnold@cvs.gnome.org>
 
 	* de.po: Updated German translation.
