--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-24  Hendrik Brandt  <heb@gnome-de.org>
+
+	* de.po: Updated German translation.
+	
 2005-01-24  Raphael Higino  <raphaelh@cvs.gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation.
