--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,9 @@
+2005-01-25  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/tmpl/gtksocket.sgml: 
+	* gtk/tmpl/gtkplug.sgml: Add note on limited
+	availability.
+
 2005-01-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/building.sgml: Some updates.  (#164147, #164108, 
