--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-26  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2005-01-24  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
